# esp32-p4-dashboard

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
config/devices/: LuzPEIBo.json  NpnON5Ug.json
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
main/app_config/: device_config.c  device_config.h
main/assets/: dashboard_background.rgb565
main/audio/: button_feedback.c  button_feedback.h
main/board/: dashboard_board.c  dashboard_board.h
main/camera/: camera_stream.c  camera_stream.h
main/mqtt/: mqtt_client_app.c  mqtt_client_app.h
main/setup/: setup_manager.c  setup_manager.h
main/storage/: nvs_config.c  nvs_config.h
main/ui/: ui_background.c  ui_background.h  ui_camera.c  ui_camera.h  ui_control.c  ui_control.h  ui_main.c  ui_main.h  ui_sensor.c  ui_sensor.h  ui_settings.c  ui_settings.h  ui_text_image.c  ui_text_image.h
tools/: apply_component_patches.py  config_provider.py  device_config_designer.html
